[project]
name = "Flask-SQLAlchemy-Lite"
version = "0.1.0"
description = "Integrate SQLAlchemy with Flask."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "David Lord" }]
maintainers = [{ name = "Pallets", email = "contact@palletsprojects.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "flask[async]",
    "sqlalchemy[asyncio]",
]

[project.urls]
Donate = "https://palletsprojects.com/donate"
Documentation = "https://flask-sqlalchemy-lite.readthedocs.io"
Changes = "https://flask-sqlalchemy-lite.readthedocs.io/page/changes/"
Source = "https://github.com/pallets-eco/flask-sqlalchemy-lite/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_sqlalchemy_lite"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flask_sqlalchemy_lite", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.9"
files = ["src/flask_sqlalchemy_lite", "tests"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.9"
include = ["src/flask_sqlalchemy_lite", "tests"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.gha-update]
tag-only = [
    "slsa-framework/slsa-github-generator",
]
